# spuddy

./: .gitignore  LICENSE  README.md
ops/: README.md  docker-compose.yml  mosquitto.conf
proto/: CMakeLists.txt  environment.proto  potato.proto  services.proto
services/cpp-dual/: Dockerfile  toolchains.nix
services/cpp-dual/growth/: CMakeLists.txt
services/cpp-dual/physics/: CMakeLists.txt
services/cpp-dual/physics/include/: grpc_server.h  physics_engine.h
services/cpp-dual/physics/src/: grpc_server.cpp  main.cpp  physics_engine.cpp
